# SoftEng_Activties

./: CMakeLists.txt  avlTree.h  binarySearchTree.h  main.cpp  temp.txt  test_data.txt
test/: CMakeLists.txt  test.cpp
